# tensorsic

./: .gitignore  README.md  pyproject.toml
examples/: debug_out.txt  exprs.py  exprs_binary.py  lc.py  prompt.txt  ref.hs  ref_debug.hs  simple.py  v0.py  v1.py  v1_old.py  v1_ref.py  v1_tests.py  v2_fp.py  v3_ref_debug.py  v4_multithread.py  v5_tensor_basic.py  v6_tensor_basic_static.py  v7_tensor.py  v8_tensor.py  v9_tensor2.py
tensorsic/: __main__.py  engine.py
