[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorsic"
version = "0.1.0"
description = "Tensorsic"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]